debian/patches/hurd-i386/submitted-init-first.diff: Fix stack switching compilation with newer gcc.
svn path=/glibc-package/trunk/; revision=4904

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ eglibc (2.13-17) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/submitted-ioctl-unsigned-size_t.diff: Add
     u?int{8,16,32,64} ioctl types.
+  * debian/patches/hurd-i386/submitted-init-first.diff: Fix stack switching
+    compilation with newer gcc.
 
   [ Steve Langasek ]
   * Install ld*.so to RTLDDIR (/lib64 or /lib), as appropriate, and convert
