kfreebsd/local-sysdeps.diff: update to revision 3689 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=4905

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ eglibc (2.13-17) UNRELEASED; urgency=low
   * Bump the multiarch-support minimum dependency for armhf, which settled
     its triplet only at the time i386 did.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 3689 (from glibc-bsd).
+
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 09 Aug 2011 11:40:02 +0200
 
 eglibc (2.13-16) unstable; urgency=low
