* debian/control.in/libc: add Breaks: lsb-core (<= 3.2-27) to make sure the     lsb symlink is still valid.
svn path=/glibc-package/trunk/; revision=4907

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ eglibc (2.13-17) UNRELEASED; urgency=low
     issues with openjdk on armhf.
   * Add patches arm/cvs-align-constant-pool.diff from upstream to fix 
     alignement issues on armhf.
+  * debian/control.in/libc: add Breaks: lsb-core (<= 3.2-27) to make sure the
+    lsb symlink is still valid.
 
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/submitted-ioctl-unsigned-size_t.diff: Add
