--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ eglibc (2.13-17) UNRELEASED; urgency=low
     dlopen'ed objects.  Closes: #637239.
   * Provide locales in locales-all as separated files instead of adding them
     to locale-archive. Use symlinks between identical files to limit the 
-    unpacked size.  Closes: #537743, #636694.
+    unpacked size.  Closes: #537743, #636694, #638173.
   * Compress libc*-dbg and locales-all to using xz. 
   * Add patches/localedata/cvs-rupee.diff from upstream to add support for
     Rupee symbol (U20B9).
