* Remove patches/any/cvs-dl-missing-deps.diff, the original problem has     been solved through other ways, so it is not needed any more. Fixes     symbols resolution with issues with icedove/iceweasel/iceape.  Closes:     #617759.
svn path=/glibc-package/trunk/; revision=4909

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ eglibc (2.13-17) UNRELEASED; urgency=low
     alignement issues on armhf.
   * debian/control.in/libc: add Breaks: lsb-core (<= 3.2-27) to make sure the
     lsb symlink is still valid.
+  * Remove patches/any/cvs-dl-missing-deps.diff, the original problem has 
+    been solved through other ways, so it is not needed any more. Fixes 
+    symbols resolution with issues with icedove/iceweasel/iceape.  Closes: 
+    #617759.
 
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/submitted-ioctl-unsigned-size_t.diff: Add
