--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-17) UNRELEASED; urgency=low
+eglibc (2.13-17) unstable; urgency=low
 
   [ Aurelien Jarno ]
   * Improve libc.NEWS to also include headers.
@@ -46,7 +46,7 @@ eglibc (2.13-17) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3689 (from glibc-bsd).
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 09 Aug 2011 11:40:02 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 22 Aug 2011 21:51:07 +0200
 
 eglibc (2.13-16) unstable; urgency=low
 
