--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-18) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Aug 2011 07:02:45 +0200
+
 eglibc (2.13-17) unstable; urgency=low
 
   [ Aurelien Jarno ]
