* On s390x the PI is /lib/ld64.so.1, so we don't need to move     ld64.so.1 from /lib to /lib64.
svn path=/glibc-package/trunk/; revision=4921

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 eglibc (2.13-18) UNRELEASED; urgency=low
 
-  * 
+  * On s390x the PI is /lib/ld64.so.1, so we don't need to move 
+    ld64.so.1 from /lib to /lib64.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Aug 2011 07:02:45 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 08:45:54 +0200
 
 eglibc (2.13-17) unstable; urgency=low
 
