New changelog entry
svn path=/glibc-package/trunk/; revision=4924

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-19) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
+
 eglibc (2.13-18) unstable; urgency=low
 
   * On s390x the PI is /lib/ld64.so.1, so we don't need to move 
