* Change libc_rtlddir to /lib on s390x.
svn path=/glibc-package/trunk/; revision=4925

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 eglibc (2.13-19) UNRELEASED; urgency=low
 
-  * 
+  * Change libc_rtlddir to /lib on s390x.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
