[ Jeremie Koenig ]   * New patches to improve the signal code on Hurd:     patches/hurd-i386/submitted-hurdsig-fixes.diff,     patches/hurd-i386/submitted-hurdsig-global-dispositions.diff,     patches/hurd-i386/submitted-hurdsig-SA_SIGINFO.diff,     patches/hurd-i386/submitted-hurdsig-fixes-2.diff.   * Update testsuite accordingly.   * Remove patches/hurd-i386/submitted-PTRACE_CONTINUE.diff, now covered by     submitted-hurdsig-fixes.diff.   * libc0.3.symbols.hurd-i386: Add version for global-disposition functions.
svn path=/glibc-package/trunk/; revision=4926

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,18 @@
 eglibc (2.13-19) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * Change libc_rtlddir to /lib on s390x.
+
+  [ Jeremie Koenig ]
+  * New patches to improve the signal code on Hurd:
+    patches/hurd-i386/submitted-hurdsig-fixes.diff,
+    patches/hurd-i386/submitted-hurdsig-global-dispositions.diff,
+    patches/hurd-i386/submitted-hurdsig-SA_SIGINFO.diff,
+    patches/hurd-i386/submitted-hurdsig-fixes-2.diff.
+  * Update testsuite accordingly.
+  * Remove patches/hurd-i386/submitted-PTRACE_CONTINUE.diff, now covered by
+    submitted-hurdsig-fixes.diff.
+  * libc0.3.symbols.hurd-i386: Add version for global-disposition functions.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
