Add patches/hurd-i386/submitted-libc_stack_end.diff to fix ruby1.9.1 stack detection.
svn path=/glibc-package/trunk/; revision=4927

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ eglibc (2.13-19) UNRELEASED; urgency=low
     submitted-hurdsig-fixes.diff.
   * libc0.3.symbols.hurd-i386: Add version for global-disposition functions.
 
+  [ Samuel Thibault ]
+  * Add patches/hurd-i386/submitted-libc_stack_end.diff to fix ruby1.9.1 stack
+    detection.
+
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
 eglibc (2.13-18) unstable; urgency=low
