--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ eglibc (2.13-19) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Change libc_rtlddir to /lib on s390x.
+  * Add debian/patches/submitted-glob_h-ifdef.diff to fix an undefined
+    preprocessor symbol in some rare conditions.  Closes: #639213.
 
   [ Jeremie Koenig ]
   * New patches to improve the signal code on Hurd:
