Fix ld.so location used inside ldd on kfreebsd-amd64
svn path=/glibc-package/trunk/; revision=4933

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,10 @@ eglibc (2.13-19) UNRELEASED; urgency=low
   * Add patches/hurd-i386/submitted-libc_stack_end.diff to fix ruby1.9.1 stack
     detection.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 3696 (from glibc-bsd).
+    Fixes ld.so location used inside ldd on kfreebsd-amd64. Closes #640156.
+
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
 eglibc (2.13-18) unstable; urgency=low
