wrap faccessat() X_OK testing for superuser
svn path=/glibc-package/trunk/; revision=4934

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ eglibc (2.13-19) UNRELEASED; urgency=low
     detection.
 
   [ Petr Salinger ]
-  * kfreebsd/local-sysdeps.diff: update to revision 3696 (from glibc-bsd).
-    Fixes ld.so location used inside ldd on kfreebsd-amd64. Closes #640156.
+  * kfreebsd/local-sysdeps.diff: update to revision 3697 (from glibc-bsd).
+    - fixes ld.so location used inside ldd on kfreebsd-amd64. Closes #640156.
+    - wrap faccessat() X_OK testing for superuser. Closes #640325.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
