* debian/sysdeps/sparc64.mk: re-enable multiarch similarly to what     has been done on sparc.
svn path=/glibc-package/trunk/; revision=4940

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ eglibc (2.13-19) UNRELEASED; urgency=low
   * Change libc_rtlddir to /lib on s390x.
   * Add debian/patches/submitted-glob_h-ifdef.diff to fix an undefined
     preprocessor symbol in some rare conditions.  Closes: #639213.
+  * debian/sysdeps/sparc64.mk: re-enable multiarch similarly to what 
+    has been done on sparc.
 
   [ Jeremie Koenig ]
   * New patches to improve the signal code on Hurd:
