* debian/control.in/libc: remove Breaks: on perl.  Closes: #640300.
svn path=/glibc-package/trunk/; revision=4941

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ eglibc (2.13-19) UNRELEASED; urgency=low
     preprocessor symbol in some rare conditions.  Closes: #639213.
   * debian/sysdeps/sparc64.mk: re-enable multiarch similarly to what 
     has been done on sparc.
+  * debian/control.in/libc: remove Breaks: on perl.  Closes: #640300.
 
   [ Jeremie Koenig ]
   * New patches to improve the signal code on Hurd:
