--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,8 @@ eglibc (2.13-19) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3697 (from glibc-bsd).
-    - fixes ld.so location used inside ldd on kfreebsd-amd64. Closes #640156.
-    - wrap faccessat() X_OK testing for superuser. Closes #640325.
+    - fixes ld.so location used inside ldd on kfreebsd-amd64. Closes: #640156.
+    - wrap faccessat() X_OK testing for superuser. Closes: #640325.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
 
