* debian/patches/localedata/locale-C.diff: Don't include ISO14651     collation rules in C.UTF-8 locale.
svn path=/glibc-package/trunk/; revision=4943

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-19) UNRELEASED; urgency=low
   * debian/sysdeps/sparc64.mk: re-enable multiarch similarly to what 
     has been done on sparc.
   * debian/control.in/libc: remove Breaks: on perl.  Closes: #640300.
+  * debian/patches/localedata/locale-C.diff: Don't include ISO14651
+    collation rules in C.UTF-8 locale.
 
   [ Jeremie Koenig ]
   * New patches to improve the signal code on Hurd:
