* Add patches/hurd-i386/submitted-ttyname_ERANGE.diff to fix ttyname error value. * Add patches/hurd-i386/submitted-DEV_BSIZE.diff to add DEV_BSIZE.
svn path=/glibc-package/trunk/; revision=4944

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ eglibc (2.13-19) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Add patches/hurd-i386/submitted-libc_stack_end.diff to fix ruby1.9.1 stack
     detection.
+  * Add patches/hurd-i386/submitted-ttyname_ERANGE.diff to fix ttyname error
+    value.
+  * Add patches/hurd-i386/submitted-DEV_BSIZE.diff to add DEV_BSIZE.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3697 (from glibc-bsd).
