* Update debian/patches/svn-updates to revision 15228:     - Drop debian/patches/any/cvs-dl-deps.diff (merged upstream).
svn path=/glibc-package/trunk/; revision=4950

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ eglibc (2.13-19) UNRELEASED; urgency=low
   * debian/control.in/libc: remove Breaks: on perl.  Closes: #640300.
   * debian/patches/localedata/locale-C.diff: Don't include ISO14651
     collation rules in C.UTF-8 locale.
+  * Update debian/patches/svn-updates to revision 15228:
+    - Drop debian/patches/any/cvs-dl-deps.diff (merged upstream).
 
   [ Jeremie Koenig ]
   * New patches to improve the signal code on Hurd:
