--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ eglibc (2.13-19) UNRELEASED; urgency=low
     collation rules in C.UTF-8 locale.
   * Update debian/patches/svn-updates to revision 15228:
     - Drop debian/patches/any/cvs-dl-deps.diff (merged upstream).
+    - Drop debian/patches/arm/cvs-align-constant-pool.diff (merged upstream).
   * debian/debhelper.in/libc.preinst: get the dynamic linker from /bin/mv
     instead of /bin/true.  Closes: #640753.
 
