Upload to unstable
svn path=/glibc-package/trunk/; revision=4953

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-19) UNRELEASED; urgency=low
+eglibc (2.13-19) unstable; urgency=low
 
   [ Aurelien Jarno ]
   * Change libc_rtlddir to /lib on s390x.
@@ -38,7 +38,7 @@ eglibc (2.13-19) UNRELEASED; urgency=low
     - fixes ld.so location used inside ldd on kfreebsd-amd64. Closes: #640156.
     - wrap faccessat() X_OK testing for superuser. Closes: #640325.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 24 Aug 2011 12:34:56 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 07 Sep 2011 22:51:11 +0200
 
 eglibc (2.13-18) unstable; urgency=low
 
