--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+eglibc (2.13-20) unstable; urgency=low
+
+  * debian/debhelper.in/libc.preinst: call /bin/mv with --version so 
+    that it doesn't return an error.  Closes: #640872.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 08 Sep 2011 10:23:00 +0200
+
 eglibc (2.13-19) unstable; urgency=low
 
   [ Aurelien Jarno ]
