--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-21) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 08 Sep 2011 12:05:26 +0200
+
 eglibc (2.13-20) unstable; urgency=low
 
   * debian/debhelper.in/libc.preinst: call /bin/mv with --version so 
