--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 eglibc (2.13-21) UNRELEASED; urgency=low
 
-  * 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/unsubmitted-tls-support.diff: Fix port leak in fork().
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 08 Sep 2011 12:05:26 +0200
+ -- Samuel Thibault <sthibault@debian.org>  Thu, 08 Sep 2011 15:31:05 +0200
 
 eglibc (2.13-20) unstable; urgency=low
 
