* patches/hurd-i386/submitted-ttyname_ERANGE.diff: Really add to the series. * mv patches/hurd-i386/{submitted,cvs}-DEV_BSIZE.diff, and really add to the   series.
svn path=/glibc-package/trunk/; revision=4960

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ eglibc (2.13-21) UNRELEASED; urgency=low
 
   [ Samuel Thibault ]
   * patches/hurd-i386/unsubmitted-tls-support.diff: Fix port leak in fork().
+  * patches/hurd-i386/submitted-ttyname_ERANGE.diff: Really add to the series.
+  * mv patches/hurd-i386/{submitted,cvs}-DEV_BSIZE.diff, and really add to the
+    series.
 
  -- Samuel Thibault <sthibault@debian.org>  Thu, 08 Sep 2011 15:31:05 +0200
 
