Add patches/hurd-i386/cvs-fork_ports.diff to fix uninitialized reference count.
svn path=/glibc-package/trunk/; revision=4961

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.13-21) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-ttyname_ERANGE.diff: Really add to the series.
   * mv patches/hurd-i386/{submitted,cvs}-DEV_BSIZE.diff, and really add to the
     series.
+  * Add patches/hurd-i386/cvs-fork_ports.diff to fix uninitialized reference
+    count.
 
  -- Samuel Thibault <sthibault@debian.org>  Thu, 08 Sep 2011 15:31:05 +0200
 
