--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,12 @@ eglibc (2.13-21) UNRELEASED; urgency=low
   * Add patches/hurd-i386/cvs-fork_ports.diff to fix uninitialized reference
     count.
 
- -- Samuel Thibault <sthibault@debian.org>  Thu, 08 Sep 2011 15:31:05 +0200
+  [ Aurelien Jarno ]
+  * Add debian/patches/cvs-dl_close-scope-handling.diff from upstream to
+    fix issues with dl_close() when resolving locally-defined symbols.
+    Closes: #625250.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Sep 2011 07:01:20 +0200
 
 eglibc (2.13-20) unstable; urgency=low
 
