* debian/patches/localedata/locale-C.diff: define strict numerical ordering     for the whole unicode range.  Closes: #641309.
svn path=/glibc-package/trunk/; revision=4968

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.13-21) UNRELEASED; urgency=low
     series.
   * Add patches/hurd-i386/cvs-fork_ports.diff to fix uninitialized reference
     count.
+  * debian/patches/localedata/locale-C.diff: define strict numerical ordering
+    for the whole unicode range.  Closes: #641309.
 
   [ Aurelien Jarno ]
   * Add debian/patches/cvs-dl_close-scope-handling.diff from upstream to
