Upload to unstable
svn path=/glibc-package/trunk/; revision=4973

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.13-21) UNRELEASED; urgency=low
+eglibc (2.13-21) unstable; urgency=low
 
   [ Samuel Thibault ]
   * patches/hurd-i386/unsubmitted-tls-support.diff: Fix port leak in fork().
@@ -16,7 +16,7 @@ eglibc (2.13-21) UNRELEASED; urgency=low
     fix issues with dl_close() when resolving locally-defined symbols.
     Closes: #625250.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Sep 2011 07:01:20 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 13 Sep 2011 23:58:01 +0200
 
 eglibc (2.13-20) unstable; urgency=low
 
