* patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
svn path=/glibc-package/trunk/; revision=4977

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.13-22) UNRELEASED; urgency=low
+
+  * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Sep 2011 16:32:32 +0200
+
 eglibc (2.13-21) unstable; urgency=low
 
   [ Samuel Thibault ]
