* Don't ship /usr/share/doc/locales/README.  Closes: #643885, #643887.
svn path=/glibc-package/trunk/; revision=4985

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.13-22) UNRELEASED; urgency=low
 
   * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
+  * Don't ship /usr/share/doc/locales/README.  Closes: #643885, #643887.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Sep 2011 16:32:32 +0200
 
