* Ignore tst-cancelx17.out error on amd64.  Closes: #643567.
svn path=/glibc-package/trunk/; revision=4986

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ eglibc (2.13-22) UNRELEASED; urgency=low
 
   * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
   * Don't ship /usr/share/doc/locales/README.  Closes: #643885, #643887.
+  * Ignore tst-cancelx17.out error on amd64.  Closes: #643567.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Sep 2011 16:32:32 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Oct 2011 00:35:40 +0200
 
 eglibc (2.13-21) unstable; urgency=low
 
