patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to setres[ug]id.
svn path=/glibc-package/trunk/; revision=4989

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 eglibc (2.13-22) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
   * Don't ship /usr/share/doc/locales/README.  Closes: #643885, #643887.
   * Ignore tst-cancelx17.out error on amd64.  Closes: #643567.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Oct 2011 00:35:40 +0200
+  [ Samuel Thibault ]
+  * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
+    setres[ug]id.
+
+ -- Samuel Thibault <sthibault@debian.org>  Mon, 17 Oct 2011 01:23:52 +0200
 
 eglibc (2.13-21) unstable; urgency=low
 
