kfreebsd/local-sysdeps.diff: update to revision 3740 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=4990

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
     setres[ug]id.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 3740 (from glibc-bsd).
+
  -- Samuel Thibault <sthibault@debian.org>  Mon, 17 Oct 2011 01:23:52 +0200
 
 eglibc (2.13-21) unstable; urgency=low
