--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
-    setres[ug]id.
+    setres[ug]id.  Closes: #645285.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3742 (from glibc-bsd).
