* patches/hurd-i386/{unsubmitted-gscope.diff,unsubmitted-_dl_random.diff,     submitted-ECANCELED.diff, submitted-dl-sysdep.diff,     unsubmitted-check_native.diff, submitted-extern_inline.diff,     submitted-ptr-mangle.diff, submitted-stat.diff,     unsubmitted-tls-support.diff, unsubmitted-longjmp_chk.diff,     unsubmitted-ptsname.diff, submitted-strtoul.diff,     unsubmitted-atomic-no-multiple_threads.diff, unsubmitted-i686.diff}:     Update to topgit version, and rename to     tg-tlsdesc.sym.diff, tg-struct_stat.diff, tg-gscope.diff,     tg-tg-_dl_random.diff, bits_atomic.h_multiple_threads.diff,     tg-tg-dl-sysdep.c_SHARED.diff, __i686_defined.diff,     tg-tg-regenerate_errno.h.diff, tg-ptrmangle.diff, strtoul_PLT.diff,     tg-tg-tls.diff, tg-extern_inline.diff, tg-grantpt.diff, check_native.diff,     tg-tg-____longjmp_chk.diff.
svn path=/glibc-package/trunk/; revision=5011

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,20 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
     setres[ug]id.  Closes: #645285.
+  * patches/hurd-i386/{unsubmitted-gscope.diff,unsubmitted-_dl_random.diff,
+    submitted-ECANCELED.diff, submitted-dl-sysdep.diff,
+    unsubmitted-check_native.diff, submitted-extern_inline.diff,
+    submitted-ptr-mangle.diff, submitted-stat.diff,
+    unsubmitted-tls-support.diff, unsubmitted-longjmp_chk.diff,
+    unsubmitted-ptsname.diff, submitted-strtoul.diff,
+    unsubmitted-atomic-no-multiple_threads.diff, unsubmitted-i686.diff}:
+    Update to topgit version, and rename to 
+    tg-tlsdesc.sym.diff, tg-struct_stat.diff, tg-gscope.diff,
+    tg-tg-_dl_random.diff, bits_atomic.h_multiple_threads.diff,
+    tg-tg-dl-sysdep.c_SHARED.diff, __i686_defined.diff,
+    tg-tg-regenerate_errno.h.diff, tg-ptrmangle.diff, strtoul_PLT.diff,
+    tg-tg-tls.diff, tg-extern_inline.diff, tg-grantpt.diff, check_native.diff,
+    tg-tg-____longjmp_chk.diff.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
