* patches/hurd-i386/submitted-libc_once.diff: Move kfreebsd part to     patches/kfreebsd/submitted-libc_once.diff.
svn path=/glibc-package/trunk/; revision=5012

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     tg-tg-regenerate_errno.h.diff, tg-ptrmangle.diff, strtoul_PLT.diff,
     tg-tg-tls.diff, tg-extern_inline.diff, tg-grantpt.diff, check_native.diff,
     tg-tg-____longjmp_chk.diff.
+  * patches/hurd-i386/submitted-libc_once.diff: Move kfreebsd part to
+    patches/kfreebsd/submitted-libc_once.diff.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
