* patches/hurd-i386/submitted-ldsodefs.h.diff: Move commited part to     patches/hurd-i386/cvs-ldsodefs.h.diff
svn path=/glibc-package/trunk/; revision=5013

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     tg-tg-____longjmp_chk.diff.
   * patches/hurd-i386/submitted-libc_once.diff: Move kfreebsd part to
     patches/kfreebsd/submitted-libc_once.diff.
+  * patches/hurd-i386/submitted-ldsodefs.h.diff: Move commited part to
+    patches/hurd-i386/cvs-ldsodefs.h.diff
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
