* patches/hurd-i386/{submitted-ldsodefs.h.diff, submitted-libc_once.diff}:     Update to topgit version, and rename to     {tg-elfosabi_gnu.diff, tg-libc_once.diff}.
svn path=/glibc-package/trunk/; revision=5014

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,14 +14,15 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     submitted-ptr-mangle.diff, submitted-stat.diff,
     unsubmitted-tls-support.diff, unsubmitted-longjmp_chk.diff,
     unsubmitted-ptsname.diff, submitted-strtoul.diff,
-    unsubmitted-atomic-no-multiple_threads.diff, unsubmitted-i686.diff}:
+    unsubmitted-atomic-no-multiple_threads.diff, unsubmitted-i686.diff,
+    submitted-ldsodefs.h.diff, submitted-libc_once.diff}:
     Update to topgit version, and rename to 
-    tg-tlsdesc.sym.diff, tg-struct_stat.diff, tg-gscope.diff,
-    tg-tg-_dl_random.diff, bits_atomic.h_multiple_threads.diff,
-    tg-tg-dl-sysdep.c_SHARED.diff, __i686_defined.diff,
-    tg-tg-regenerate_errno.h.diff, tg-ptrmangle.diff, strtoul_PLT.diff,
-    tg-tg-tls.diff, tg-extern_inline.diff, tg-grantpt.diff, check_native.diff,
-    tg-tg-____longjmp_chk.diff.
+    {tg-tlsdesc.sym.diff, tg-struct_stat.diff, tg-gscope.diff,
+    tg-_dl_random.diff, tg-bits_atomic.h_multiple_threads.diff,
+    tg-dl-sysdep.c_SHARED.diff, tg-__i686_defined.diff,
+    tg-regenerate_errno.h.diff, tg-ptrmangle.diff, tg-strtoul_PLT.diff,
+    tg-tls.diff, tg-extern_inline.diff, tg-grantpt.diff, tg-check_native.diff,
+    tg-____longjmp_chk.diff, tg-elfosabi_gnu.diff, tg-libc_once.diff}.
   * patches/hurd-i386/submitted-libc_once.diff: Move kfreebsd part to
     patches/kfreebsd/submitted-libc_once.diff.
   * patches/hurd-i386/submitted-ldsodefs.h.diff: Move commited part to
