* patches/any/cvs-nptl-pthread-race.diff: fix a race in NPTL code that     sometimes causes a deadlock when calling fork() from a thread.
svn path=/glibc-package/trunk/; revision=5015

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/i386/local-cpuid-level2.diff: fix a typo.  Closes: #609389.
   * Don't ship /usr/share/doc/locales/README.  Closes: #643885, #643887.
   * Ignore tst-cancelx17.out error on amd64.  Closes: #643567.
+  * patches/any/cvs-nptl-pthread-race.diff: fix a race in NPTL code that
+    sometimes causes a deadlock when calling fork() from a thread.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
