* debhelper/libc.NEWS: replace $arch by <triplet> and explain how to get     it.  Closes: #644990.
svn path=/glibc-package/trunk/; revision=5017

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * Ignore tst-cancelx17.out error on amd64.  Closes: #643567.
   * patches/any/cvs-nptl-pthread-race.diff: fix a race in NPTL code that
     sometimes causes a deadlock when calling fork() from a thread.
+  * debhelper/libc.NEWS: replace $arch by <triplet> and explain how to get
+    it.  Closes: #644990.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
