* Add patches/alpha/submitted-fallocated.diff to define fallocate() in     <fcntl.h> on alpha.  Closes: #641868.
svn path=/glibc-package/trunk/; revision=5018

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     sometimes causes a deadlock when calling fork() from a thread.
   * debhelper/libc.NEWS: replace $arch by <triplet> and explain how to get
     it.  Closes: #644990.
+  * Add patches/alpha/submitted-fallocated.diff to define fallocate() in
+    <fcntl.h> on alpha.  Closes: #641868.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
