* debian/rules: don't build locales-all when cross-compiling.  Closes:     #644771.
svn path=/glibc-package/trunk/; revision=5019

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     it.  Closes: #644990.
   * Add patches/alpha/submitted-fallocated.diff to define fallocate() in
     <fcntl.h> on alpha.  Closes: #641868.
+  * debian/rules: don't build locales-all when cross-compiling.  Closes:
+    #644771.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
