* patches/amd64/cvs-avx-detection.diff: do not use AVX if hardware support     is present, but not enabled in the kernel.  Closes: #646549.
svn path=/glibc-package/trunk/; revision=5020

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     <fcntl.h> on alpha.  Closes: #641868.
   * debian/rules: don't build locales-all when cross-compiling.  Closes:
     #644771.
+  * patches/amd64/cvs-avx-detection.diff: do not use AVX if hardware support
+    is present, but not enabled in the kernel.  Closes: #646549.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
