* patches/amd64/cvs-dl_trampoline-cfi.diff: fix CFI in dl_trampoline code.
svn path=/glibc-package/trunk/; revision=5022

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     #644771.
   * patches/amd64/cvs-avx-detection.diff: do not use AVX if hardware support
     is present, but not enabled in the kernel.  Closes: #646549.
+  * patches/amd64/cvs-dl_trampoline-cfi.diff: fix CFI in dl_trampoline code.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
