--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/amd64/cvs-avx-detection.diff: do not use AVX if hardware support
     is present, but not enabled in the kernel.  Closes: #646549.
   * patches/amd64/cvs-dl_trampoline-cfi.diff: fix CFI in dl_trampoline code.
+  * patches/mips/submitted-dl-platform.diff: fix a typo preventing loongson2f
+    platform directory to be used.  Closes: #646610.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-setresid.diff: New patch to fix -1 passed to
