Add a new debconf template, libraries/restart-without-asking, shared with pam (and eventually hopefully openssl) which allows users to opt in to silent restarts of services affected by NSS upgrades.  This fixes the longstanding nuisance that a user may be prompted as many as three times during an upgrade between releases to ask whether it's ok to restart a service that will be restarted anyway when the package itself gets upgraded.
svn path=/glibc-package/trunk/; revision=5024

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,15 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
 
+  [ Steve Langasek ]
+  * Add a new debconf template, libraries/restart-without-asking, shared
+    with pam (and eventually hopefully openssl) which allows users to opt in
+    to silent restarts of services affected by NSS upgrades.  This fixes the
+    longstanding nuisance that a user may be prompted as many as three times
+    during an upgrade between releases to ask whether it's ok to restart a
+    service that will be restarted anyway when the package itself gets
+    upgraded.
+
  -- Samuel Thibault <sthibault@debian.org>  Mon, 17 Oct 2011 01:23:52 +0200
 
 eglibc (2.13-21) unstable; urgency=low
