--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -7,11 +7,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc-2.3.2.ds1\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-06-11 17:30+01:00\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org> \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,9 +36,9 @@ msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Lokalitetsfilerne er en ramme, så du kan skifte imellem forskellige sprog og give "
-"brugerne mulighed for at anvende deres eget sprog, land, tegn, sorteringsrækkefølge "
-"med mere."
+"Lokalitetsfilerne er en ramme, så du kan skifte imellem forskellige sprog og "
+"give brugerne mulighed for at anvende deres eget sprog, land, tegn, "
+"sorteringsrækkefølge med mere."
 
 #. Type: multiselect
 #. Description
@@ -84,8 +85,8 @@ msgid ""
 "language, they will experience difficulties."
 msgstr ""
 "Dette vil sætte sproget for hele systemet. Hvis dette system er et "
-"flerbrugersystem, hvor ikke alle brugerne er i stand til at tale standardsproget, "
-"vil de løbe ind i problemer."
+"flerbrugersystem, hvor ikke alle brugerne er i stand til at tale "
+"standardsproget, vil de løbe ind i problemer."
 
 #. Type: boolean
 #. Description
@@ -108,8 +109,8 @@ msgstr ""
 "Kørende tjenester og programmer som bruger NSS skal genstartes, ellers vil "
 "de måske ikke mere kunne foretage opslag eller opnå godkendelse. "
 "Installationsprocessen er i stand til at genstarte nogle tjenester (såsom "
-"ssh eller telnetd), men andre programmer kan ikke genstartes automatisk. "
-"Et sådant program som kræver manuel stop og genstart efter glibc-opgraderingen "
+"ssh eller telnetd), men andre programmer kan ikke genstartes automatisk. Et "
+"sådant program som kræver manuel stop og genstart efter glibc-opgraderingen "
 "er xdm - da automatisk genstart kan afbryde dine aktive X11-sessioner."
 
 #. Type: boolean
@@ -119,8 +120,8 @@ msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
 msgstr ""
-"Dette skript registrerede de følgende installerede tjenester, som skal stoppes "
-"før opgradering: ${services}"
+"Dette skript registrerede de følgende installerede tjenester, som skal "
+"stoppes før opgradering: ${services}"
 
 #. Type: boolean
 #. Description
@@ -175,8 +176,8 @@ msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
 msgstr ""
-"De følgende tjenester kunne ikke genstartes for GNU "
-"libc-biblioteksopgraderingen:"
+"De følgende tjenester kunne ikke genstartes for GNU libc-"
+"biblioteksopgraderingen:"
 
 #. Type: error
 #. Description
@@ -211,3 +212,21 @@ msgstr ""
 "genstartet eller stoppet, før du fortsætter denne opgradering, så du undgår "
 "at lukke dine brugere ud af deres igangværende sessioner."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
