--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -7,7 +7,7 @@
 #        Carlos Valdivia Yagüe <valyag@dat.etsit.upm.es>, 2003
 # - Revisions:
 #        Carlos Valdivia Yagüe <valyag@dat.etsit.upm.es>, 2006, 2007, 2008
-#	 Omar Campagne <ocampagne@gmail.com> 2010
+# 	 Omar Campagne <ocampagne@gmail.com> 2010
 #
 # Traductores, si no conocen el formato PO, merece la pena leer la
 # documentación de gettext, especialmente las secciones dedicadas a este
@@ -42,11 +42,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc 2.10.2-6\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-04-19 11:21+0200\n"
 "Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
 "Language-Team: Debian L10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -145,10 +146,9 @@ msgstr ""
 "reiniciarse, o por el contrario puede que ya no sean capaces de realizar "
 "búsquedas o autenticación. El proceso de instalación puede reiniciar algunos "
 "servicios (tales como «ssh» o «telnetd»), pero otros programas no pueden "
-"reiniciarse automáticamente. Uno de dichos programas que se necesitan "
-"parar y reiniciar manualmente tras la actualización de glibc es xdm, "
-"puesto que un reinicio automático podría desconectar sus sesiones X11 "
-"activas."
+"reiniciarse automáticamente. Uno de dichos programas que se necesitan parar "
+"y reiniciar manualmente tras la actualización de glibc es xdm, puesto que un "
+"reinicio automático podría desconectar sus sesiones X11 activas."
 
 #. Type: boolean
 #. Description
@@ -174,7 +174,8 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr "Servicios a reiniciar para la actualización de la biblioteca libc de GNU:"
+msgstr ""
+"Servicios a reiniciar para la actualización de la biblioteca libc de GNU:"
 
 #. Type: string
 #. Description
@@ -199,14 +200,16 @@ msgstr ""
 msgid ""
 "Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
-"Aviso: reiniciar «sshd»/«telnetd» no debería afectar a las conexiones activas."
+"Aviso: reiniciar «sshd»/«telnetd» no debería afectar a las conexiones "
+"activas."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr "Fallo al reiniciar algunos servicios para la actualización de la "
-"biblioteca libc de GNU"
+msgstr ""
+"Fallo al reiniciar algunos servicios para la actualización de la biblioteca "
+"libc de GNU"
 
 #. Type: error
 #. Description
@@ -251,3 +254,21 @@ msgstr ""
 "antes de continuar con la actualización. Así evitará que los usuarios queden "
 "bloqueados y sin poder reanudar sus sesiones actuales."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
