--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -7,11 +7,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.11.2-6\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-10-23 11:57+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,7 +35,9 @@ msgstr "Locales a generar:"
 msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
-msgstr "Els locales són un entorn que permet que els usuaris canviïn la llengua, el país, els caràcters, la classificació alfabètica, etc."
+msgstr ""
+"Els locales són un entorn que permet que els usuaris canviïn la llengua, el "
+"país, els caràcters, la classificació alfabètica, etc."
 
 #. Type: multiselect
 #. Description
@@ -43,7 +46,11 @@ msgid ""
 "Please choose which locales to generate. UTF-8 locales should be chosen by "
 "default, particularly for new installations. Other character sets may be "
 "useful for backwards compatibility with older systems and software."
-msgstr "Trieu els locales que vulgueu generar. Els locales UTF-8 haurien de ser l'opció predeterminada, especialment en noves instal·lacions. Altres jocs de caràcters us poden ser útils per motius de compatibilitat amb sistemes i programari antic."
+msgstr ""
+"Trieu els locales que vulgueu generar. Els locales UTF-8 haurien de ser "
+"l'opció predeterminada, especialment en noves instal·lacions. Altres jocs de "
+"caràcters us poden ser útils per motius de compatibilitat amb sistemes i "
+"programari antic."
 
 #. Type: select
 #. Choices
@@ -64,7 +71,10 @@ msgid ""
 "Many packages in Debian use locales to display text in the correct language "
 "for the user. You can choose a default locale for the system from the "
 "generated locales."
-msgstr "A Debian, molts paquets fan servir els locales per mostrar el text en la llengua dels usuaris. Podeu canviar el locale predeterminat del sistema triant entre els locales generats."
+msgstr ""
+"A Debian, molts paquets fan servir els locales per mostrar el text en la "
+"llengua dels usuaris. Podeu canviar el locale predeterminat del sistema "
+"triant entre els locales generats."
 
 #. Type: select
 #. Description
@@ -73,7 +83,10 @@ msgid ""
 "This will select the default language for the entire system. If this system "
 "is a multi-user system where not all users are able to speak the default "
 "language, they will experience difficulties."
-msgstr "Amb aquesta opció seleccioneu la llengua predeterminada de tot el sistema. Si aquest és un entorn multiusuari on no tothom parla la mateixa llengua, alguns usuaris poden tindre dificultats."
+msgstr ""
+"Amb aquesta opció seleccioneu la llengua predeterminada de tot el sistema. "
+"Si aquest és un entorn multiusuari on no tothom parla la mateixa llengua, "
+"alguns usuaris poden tindre dificultats."
 
 #. Type: boolean
 #. Description
@@ -117,7 +130,9 @@ msgstr ""
 msgid ""
 "If you want to interrupt the upgrade now and continue later, please answer "
 "No to the question below."
-msgstr "Si voleu interrompre ara l'actualització i continuar més tard, contesteu negativament la pregunta següent."
+msgstr ""
+"Si voleu interrompre ara l'actualització i continuar més tard, contesteu "
+"negativament la pregunta següent."
 
 #. Type: string
 #. Description
@@ -193,4 +208,30 @@ msgid ""
 "these programs. You should arrange for these programs to be restarted or "
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
-msgstr "S'ha detectat al sistema una o més instàncies de l'xscreensaver o l'xlockmore en execució. Degut a alguns canvis de biblioteques incompatibles, l'actualització de la GNU libc causarà que no us pugueu autenticar contra aquests programes. Hauríeu d'assegurar-vos que aquests programes es reinicien o s'aturen abans de continuar aquesta actualització, per a evitar que els usuaris es queden blocats fora de les seues sessions actuals."
+msgstr ""
+"S'ha detectat al sistema una o més instàncies de l'xscreensaver o "
+"l'xlockmore en execució. Degut a alguns canvis de biblioteques "
+"incompatibles, l'actualització de la GNU libc causarà que no us pugueu "
+"autenticar contra aquests programes. Hauríeu d'assegurar-vos que aquests "
+"programes es reinicien o s'aturen abans de continuar aquesta actualització, "
+"per a evitar que els usuaris es queden blocats fora de les seues sessions "
+"actuals."
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
