--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -5,11 +5,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc 2.9-5\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2009-03-16 19:04+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -210,9 +211,27 @@ msgid ""
 msgstr ""
 "Eine oder mehrere laufende Instanzen von Xscreensaver oder Xlockmore sind "
 "auf diesem System entdeckt worden. Aufgrund inkompatibler Änderungen in "
-"Bibliotheken wird das GNU Libc-Upgrade Sie außerstande setzen, sich gegenüber"
-"diesen Programmen zu authentifizieren. Sie sollten dafür sorgen, dass diese"
-"Programme neu gestartet oder beendet werden, bevor Sie dieses Upgrade "
-"fortsetzen, damit Ihre Benutzer nicht aus ihren laufenden Sitzungen "
+"Bibliotheken wird das GNU Libc-Upgrade Sie außerstande setzen, sich "
+"gegenüberdiesen Programmen zu authentifizieren. Sie sollten dafür sorgen, "
+"dass dieseProgramme neu gestartet oder beendet werden, bevor Sie dieses "
+"Upgrade fortsetzen, damit Ihre Benutzer nicht aus ihren laufenden Sitzungen "
 "ausgesperrt werden."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
