--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -5,11 +5,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2007-09-11 09:57+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,8 +36,8 @@ msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Lokalak hizkuntza anitz artean aldatzeko ingurugiroa da erabiltzaileek "
-"beren hizkuntza, herrialdea, karaktere-jokoa etab. erabiltzeko gaitasuna ematen "
+"Lokalak hizkuntza anitz artean aldatzeko ingurugiroa da erabiltzaileek beren "
+"hizkuntza, herrialdea, karaktere-jokoa etab. erabiltzeko gaitasuna ematen "
 "dute."
 
 #. Type: multiselect
@@ -192,7 +193,9 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
-msgstr "xscreensaver eta xlockmore berrabiarazi egin behar dira bertsio-berritu ondoren"
+msgstr ""
+"xscreensaver eta xlockmore berrabiarazi egin behar dira bertsio-berritu "
+"ondoren"
 
 #. Type: error
 #. Description
@@ -210,3 +213,22 @@ msgstr ""
 "programa hauetan autentifikatzen utziko. Programa hauek berrabiazi edo "
 "gelditzeko antolatu beharko zinateke erabiltzaileak beren saioetatik kanpo "
 "uztea sahiesteko."
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
