--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -8,11 +8,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2009-03-14 08:09+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -163,7 +164,8 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
-msgid "Note: restarting sshd/telnetd should not affect any existing connections."
+msgid ""
+"Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
 "Veuillez noter que le redémarrage de telnetd ou sshd n'affectera pas les "
 "connexions existantes."
@@ -218,3 +220,21 @@ msgstr ""
 "programmes doivent être redémarrés ou arrêtés pour éviter que des "
 "utilisateurs ne puissent plus accéder à leurs sessions."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
