--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -7,11 +7,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eglibc_2.11.2-2_gl\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-08-13 01:43+0200\n"
 "Last-Translator: Jorge Barreiro <yortx.barry@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -159,14 +160,17 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
-msgid "Note: restarting sshd/telnetd should not affect any existing connections."
-msgstr "Nota: o reinicio de sshd/telnetd non debería afectar ás conexións existentes."
+msgid ""
+"Note: restarting sshd/telnetd should not affect any existing connections."
+msgstr ""
+"Nota: o reinicio de sshd/telnetd non debería afectar ás conexións existentes."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr "Problemas ao reiniciar algúns servizos para a actualización de GNU libc"
+msgstr ""
+"Problemas ao reiniciar algúns servizos para a actualización de GNU libc"
 
 #. Type: error
 #. Description
@@ -205,9 +209,27 @@ msgid ""
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
 msgstr ""
-"Detectáronse unha ou máis instancias de xscreensaver ou xlockmore no sistema. "
-"Debido a cambios incompatibles, a actualización da biblioteca GNU libc non lle "
-"deixará autenticarse en eses programas. Debe encargarse de que "
+"Detectáronse unha ou máis instancias de xscreensaver ou xlockmore no "
+"sistema. Debido a cambios incompatibles, a actualización da biblioteca GNU "
+"libc non lle deixará autenticarse en eses programas. Debe encargarse de que "
 "eses programas sexan reiniciados ou parados antes de continuar con esta "
 "actualización para evitar que non poida volver a entrar nas sesións actuais."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
