--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -17,11 +17,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc 2.11.2-7\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-11-21 17:14+0900\n"
 "Last-Translator: Nobuhiro Iwamatsu <iwamatsu@debian.org>\n"
 "Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -41,14 +42,24 @@ msgstr "生成するロケールの選択:"
 #. Type: multiselect
 #. Description
 #: ../debhelper.in/locales.templates:1002
-msgid "Locales are a framework to switch between multiple languages and allow users to use their language, country, characters, collation order, etc."
-msgstr "ロケールとは、複数の言語を切り替え、ユーザが自身の言語・国・文字・並べ替え順序などを使えるように許可するための仕組みです。"
+msgid ""
+"Locales are a framework to switch between multiple languages and allow users "
+"to use their language, country, characters, collation order, etc."
+msgstr ""
+"ロケールとは、複数の言語を切り替え、ユーザが自身の言語・国・文字・並べ替え順"
+"序などを使えるように許可するための仕組みです。"
 
 #. Type: multiselect
 #. Description
 #: ../debhelper.in/locales.templates:1002
-msgid "Please choose which locales to generate. UTF-8 locales should be chosen by default, particularly for new installations. Other character sets may be useful for backwards compatibility with older systems and software."
-msgstr "生成したいロケールを選択してください。UTF-8 ロケールは、特に新規にインストールしたものであれば、デフォルトで選択されているはずです。その他の文字セットは、より古いシステムおよびソフトウェアとの後方互換性のために役立つでしょう。"
+msgid ""
+"Please choose which locales to generate. UTF-8 locales should be chosen by "
+"default, particularly for new installations. Other character sets may be "
+"useful for backwards compatibility with older systems and software."
+msgstr ""
+"生成したいロケールを選択してください。UTF-8 ロケールは、特に新規にインストー"
+"ルしたものであれば、デフォルトで選択されているはずです。その他の文字セット"
+"は、より古いシステムおよびソフトウェアとの後方互換性のために役立つでしょう。"
 
 #. Type: select
 #. Choices
@@ -65,14 +76,26 @@ msgstr "システム標準の環境変数として設定するデフォルトロ
 #. Type: select
 #. Description
 #: ../debhelper.in/locales.templates:2002
-msgid "Many packages in Debian use locales to display text in the correct language for the user. You can choose a default locale for the system from the generated locales."
-msgstr "ユーザに正しい言語でテキストを表示するため、Debian では多くのパッケージがロケールを使用します。生成したロケールの中からシステムでのデフォルトロケールを選択できます。"
+msgid ""
+"Many packages in Debian use locales to display text in the correct language "
+"for the user. You can choose a default locale for the system from the "
+"generated locales."
+msgstr ""
+"ユーザに正しい言語でテキストを表示するため、Debian では多くのパッケージがロ"
+"ケールを使用します。生成したロケールの中からシステムでのデフォルトロケールを"
+"選択できます。"
 
 #. Type: select
 #. Description
 #: ../debhelper.in/locales.templates:2002
-msgid "This will select the default language for the entire system. If this system is a multi-user system where not all users are able to speak the default language, they will experience difficulties."
-msgstr "これはシステム全体のデフォルトロケールを選ぶことになります。このシステムがマルチユーザシステムで、すべてのユーザがデフォルトの言語を話すことができるというわけではない場合は、そういった人々は困難を感じることになってしまいます。"
+msgid ""
+"This will select the default language for the entire system. If this system "
+"is a multi-user system where not all users are able to speak the default "
+"language, they will experience difficulties."
+msgstr ""
+"これはシステム全体のデフォルトロケールを選ぶことになります。このシステムがマ"
+"ルチユーザシステムで、すべてのユーザがデフォルトの言語を話すことができるとい"
+"うわけではない場合は、そういった人々は困難を感じることになってしまいます。"
 
 #. Type: boolean
 #. Description
@@ -83,20 +106,42 @@ msgstr "glibc を今更新しますか?"
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:1001
-msgid "Running services and programs that are using NSS need to be restarted, otherwise they might not be able to do lookup or authentication any more. The installation process is able to restart some services (such as ssh or telnetd), but other programs cannot be restarted automatically. One such program that needs manual stopping and restart after the glibc upgrade by yourself is xdm - because automatic restart might disconnect your active X11 sessions."
-msgstr "NSS を利用している実行中のサービスおよびプログラムは、再起動する必要があります。さもないと、ルックアップおよび認証がもう利用できないことになります。インストール手続きではいくつかのサービス (ssh や telnetd など) を再起動することができますが、その他のプログラムは自動では再起動されません。手動での停止および glibc の更新のあとにあなた自身で再起動する必要のあるそのようなプログラムの 1 つとしては、xdm があります。というのも、自動再起動はあなたのアクティブな X11 のセッションを閉じてしまうことになるからです。"
+msgid ""
+"Running services and programs that are using NSS need to be restarted, "
+"otherwise they might not be able to do lookup or authentication any more. "
+"The installation process is able to restart some services (such as ssh or "
+"telnetd), but other programs cannot be restarted automatically. One such "
+"program that needs manual stopping and restart after the glibc upgrade by "
+"yourself is xdm - because automatic restart might disconnect your active X11 "
+"sessions."
+msgstr ""
+"NSS を利用している実行中のサービスおよびプログラムは、再起動する必要がありま"
+"す。さもないと、ルックアップおよび認証がもう利用できないことになります。イン"
+"ストール手続きではいくつかのサービス (ssh や telnetd など) を再起動することが"
+"できますが、その他のプログラムは自動では再起動されません。手動での停止および "
+"glibc の更新のあとにあなた自身で再起動する必要のあるそのようなプログラムの 1 "
+"つとしては、xdm があります。というのも、自動再起動はあなたのアクティブな X11 "
+"のセッションを閉じてしまうことになるからです。"
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:1001
-msgid "This script detected the following installed services which must be stopped before the upgrade: ${services}"
-msgstr "スクリプトは、更新前に停止されなければならない以下のインストールされたサービスを検出しました: ${services}"
+msgid ""
+"This script detected the following installed services which must be stopped "
+"before the upgrade: ${services}"
+msgstr ""
+"スクリプトは、更新前に停止されなければならない以下のインストールされたサービ"
+"スを検出しました: ${services}"
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:1001
-msgid "If you want to interrupt the upgrade now and continue later, please answer No to the question below."
-msgstr "更新を今中止して後日続行したいのであれば、以下の質問で「いいえ」と答えてください。"
+msgid ""
+"If you want to interrupt the upgrade now and continue later, please answer "
+"No to the question below."
+msgstr ""
+"更新を今中止して後日続行したいのであれば、以下の質問で「いいえ」と答えてくだ"
+"さい。"
 
 #. Type: string
 #. Description
@@ -107,13 +152,24 @@ msgstr "GNU libc ライブラリの更新で再起動するサービス:"
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
-msgid "Running services and programs that are using NSS need to be restarted, otherwise they might not be able to do lookup or authentication any more (for services such as ssh, this can affect your ability to login). Please review the following space-separated list of init.d scripts for services to be restarted now, and correct it if needed."
-msgstr "NSS を利用している実行中のサービスおよびプログラムは、再起動する必要があります。さもないと、ルックアップおよび認証がもう利用できないことになります (ssh のようなサービスでは、これはログインできるかどうかに影響します)。以下のスペースで区切られた、今再起動するサービスの init.d スクリプトのリストを見て、必要なら修正してください。"
+msgid ""
+"Running services and programs that are using NSS need to be restarted, "
+"otherwise they might not be able to do lookup or authentication any more "
+"(for services such as ssh, this can affect your ability to login). Please "
+"review the following space-separated list of init.d scripts for services to "
+"be restarted now, and correct it if needed."
+msgstr ""
+"NSS を利用している実行中のサービスおよびプログラムは、再起動する必要がありま"
+"す。さもないと、ルックアップおよび認証がもう利用できないことになります (ssh "
+"のようなサービスでは、これはログインできるかどうかに影響します)。以下のスペー"
+"スで区切られた、今再起動するサービスの init.d スクリプトのリストを見て、必要"
+"なら修正してください。"
 
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
-msgid "Note: restarting sshd/telnetd should not affect any existing connections."
+msgid ""
+"Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr "補足: sshd/telnetd の再起動は既存の接続には影響しないはずです。"
 
 #. Type: error
@@ -125,24 +181,61 @@ msgstr "GNU libc 更新のためのいくつかのサービスの再起動で失
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
-msgid "The following services could not be restarted for the GNU libc library upgrade:"
-msgstr "GNU libc ライブラリ更新のための、以下のサービスの再起動ができませんでした。"
+msgid ""
+"The following services could not be restarted for the GNU libc library "
+"upgrade:"
+msgstr ""
+"GNU libc ライブラリ更新のための、以下のサービスの再起動ができませんでした。"
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:3001
-msgid "You will need to start these manually by running '/etc/init.d/<service> start'."
-msgstr "'/etc/init.d/<サービス> start' を実行することで、これらを手動で起動する必要があります。"
+msgid ""
+"You will need to start these manually by running '/etc/init.d/<service> "
+"start'."
+msgstr ""
+"'/etc/init.d/<サービス> start' を実行することで、これらを手動で起動する必要が"
+"あります。"
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
-msgstr "xscreensaver と xlockmore はアップグレードする前に再起動する必要があります。"
+msgstr ""
+"xscreensaver と xlockmore はアップグレードする前に再起動する必要があります。"
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:4001
-msgid "One or more running instances of xscreensaver or xlockmore have been detected on this system. Because of incompatible library changes, the upgrade of the GNU libc library will leave you unable to authenticate to these programs. You should arrange for these programs to be restarted or stopped before continuing this upgrade, to avoid locking your users out of their current sessions."
-msgstr "このシステムで 1 つ以上の xscreensaver あるいは xlockmore の動作が検出されました。非互換のライブラリ変更のため、GNU libc パッケージの更新はこれらのプログラムでの認証ができなくなるという状態にするでしょう。ユーザが現在のセッションの外に締め出されるのを避けるため、このパッケージの更新を続ける前に、これらのプログラムを再起動するか停止するように手配すべきです。"
+msgid ""
+"One or more running instances of xscreensaver or xlockmore have been "
+"detected on this system. Because of incompatible library changes, the "
+"upgrade of the GNU libc library will leave you unable to authenticate to "
+"these programs. You should arrange for these programs to be restarted or "
+"stopped before continuing this upgrade, to avoid locking your users out of "
+"their current sessions."
+msgstr ""
+"このシステムで 1 つ以上の xscreensaver あるいは xlockmore の動作が検出されま"
+"した。非互換のライブラリ変更のため、GNU libc パッケージの更新はこれらのプログ"
+"ラムでの認証ができなくなるという状態にするでしょう。ユーザが現在のセッション"
+"の外に締め出されるのを避けるため、このパッケージの更新を続ける前に、これらの"
+"プログラムを再起動するか停止するように手配すべきです。"
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
