--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc_nb\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2007-02-26 20:05+0100\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -186,3 +187,21 @@ msgid ""
 "their current sessions."
 msgstr ""
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
