--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -9,16 +9,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eglibc 2.9-18\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2009-06-27 12:46+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: multiselect
 #. Choices
@@ -163,7 +165,8 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
-msgid "Note: restarting sshd/telnetd should not affect any existing connections."
+msgid ""
+"Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
 "Примечание: перезапуск sshd/telnetd не должен повлиять на какие-либо из "
 "существующих соединений."
@@ -172,7 +175,8 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr "Произошёл сбой при перезапуске некоторых сервисов для обновления GNU libc"
+msgstr ""
+"Произошёл сбой при перезапуске некоторых сервисов для обновления GNU libc"
 
 #. Type: error
 #. Description
@@ -211,10 +215,28 @@ msgid ""
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
 msgstr ""
-"В системе обнаружен один или несколько экземпляров xscreensaver или xlockmore. "
-"Так данное обновление устанавливает несовместимую с прошлой версией библиотеку "
-"GNU libc, эти программы не смогут проводить аутентификацию. "
-"Перед тем как продолжить данное обновление вам нужно перезапустить или "
-"остановить эти программы, чтобы избежать блокировки имеющихся сеансов "
-"пользователей."
+"В системе обнаружен один или несколько экземпляров xscreensaver или "
+"xlockmore. Так данное обновление устанавливает несовместимую с прошлой "
+"версией библиотеку GNU libc, эти программы не смогут проводить "
+"аутентификацию. Перед тем как продолжить данное обновление вам нужно "
+"перезапустить или остановить эти программы, чтобы избежать блокировки "
+"имеющихся сеансов пользователей."
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
