--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -2,11 +2,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: glibc 2.6.1-1\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2008-02-26 23:21+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -200,4 +201,23 @@ msgid ""
 "these programs. You should arrange for these programs to be restarted or "
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
 msgstr ""
