--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -5,11 +5,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: locales\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2007-04-09 11:02+0300\n"
 "Last-Translator: Erçin EKER <ercin.eker@linux.org.tr>\n"
 "Language-Team: Türkçe <debian-l10n-turkish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -185,3 +186,21 @@ msgid ""
 "their current sessions."
 msgstr ""
 
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
