--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -5,65 +5,69 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: eglibc 2.11.2-6\n"
-"Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2009-03-08 15:23+0100\n"
+"Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
+"POT-Creation-Date: 2011-10-30 11:52-0700\n"
 "PO-Revision-Date: 2010-10-27 14:55+1030\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: LocFactoryEditor 1.8\n"
 
-#: ../debhelper.in/locales.templates:1001
 #. Type: multiselect
 #. Choices
+#: ../debhelper.in/locales.templates:1001
 msgid "All locales"
 msgstr "Mọi miền địa phương"
 
-#: ../debhelper.in/locales.templates:1002
 #. Type: multiselect
 #. Description
+#: ../debhelper.in/locales.templates:1002
 msgid "Locales to be generated:"
 msgstr "Miền địa phương cần tạo ra:"
 
-#: ../debhelper.in/locales.templates:1002
 #. Type: multiselect
 #. Description
+#: ../debhelper.in/locales.templates:1002
 msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Miền địa phương (locale) là một khuôn khổ để chuyển đổi giữa các ngôn ngữ khác nhau, cũng cho phép người dùng chọn sử dụng ngôn ngữ, quốc gia, ký tự, thứ tự sắp xếp v.v. của quê."
+"Miền địa phương (locale) là một khuôn khổ để chuyển đổi giữa các ngôn ngữ "
+"khác nhau, cũng cho phép người dùng chọn sử dụng ngôn ngữ, quốc gia, ký tự, "
+"thứ tự sắp xếp v.v. của quê."
 
-#: ../debhelper.in/locales.templates:1002
 #. Type: multiselect
 #. Description
+#: ../debhelper.in/locales.templates:1002
 msgid ""
 "Please choose which locales to generate. UTF-8 locales should be chosen by "
 "default, particularly for new installations. Other character sets may be "
 "useful for backwards compatibility with older systems and software."
 msgstr ""
-"Hãy chọn những miền địa phương cần tạo ra. Có nên chọn miền địa phương kiểu UTF-8 theo mặc định, đặc biệt cho việc cài đặt mới. (Ghi chú : tiếng Việt "
+"Hãy chọn những miền địa phương cần tạo ra. Có nên chọn miền địa phương kiểu "
+"UTF-8 theo mặc định, đặc biệt cho việc cài đặt mới. (Ghi chú : tiếng Việt "
 "cần thiết UTF-8.) Bộ ký tự khác có thể hữu ích để tương thích ngược với hệ "
 "thống/phần mềm cũ."
 
-#: ../debhelper.in/locales.templates:2001
 #. Type: select
 #. Choices
+#: ../debhelper.in/locales.templates:2001
 msgid "None"
 msgstr "Không có"
 
-#: ../debhelper.in/locales.templates:2002
 #. Type: select
 #. Description
+#: ../debhelper.in/locales.templates:2002
 msgid "Default locale for the system environment:"
 msgstr "Miền địa phương mặc định cho môi trường hệ thống:"
 
-#: ../debhelper.in/locales.templates:2002
 #. Type: select
 #. Description
+#: ../debhelper.in/locales.templates:2002
 msgid ""
 "Many packages in Debian use locales to display text in the correct language "
 "for the user. You can choose a default locale for the system from the "
@@ -73,9 +77,9 @@ msgstr ""
 "ngữ thích hợp với người dùng. Bạn có dịp chọn miền địa phương mặc định cho "
 "hệ thống, trong những miền địa phương được tạo ra."
 
-#: ../debhelper.in/locales.templates:2002
 #. Type: select
 #. Description
+#: ../debhelper.in/locales.templates:2002
 msgid ""
 "This will select the default language for the entire system. If this system "
 "is a multi-user system where not all users are able to speak the default "
@@ -85,15 +89,15 @@ msgstr ""
 "này có nhiều người dùng và không phải tất cả có khả năng nói ngôn ngữ mặc "
 "định, họ sẽ gặp khó khăn."
 
-#: ../debhelper.in/libc.templates:1001
 #. Type: boolean
 #. Description
+#: ../debhelper.in/libc.templates:1001
 msgid "Do you want to upgrade glibc now?"
 msgstr "Bạn có muốn nâng cấp glibc ngay bây giờ không?"
 
-#: ../debhelper.in/libc.templates:1001
 #. Type: boolean
 #. Description
+#: ../debhelper.in/libc.templates:1001
 msgid ""
 "Running services and programs that are using NSS need to be restarted, "
 "otherwise they might not be able to do lookup or authentication any more. "
@@ -111,9 +115,9 @@ msgstr ""
 "bằng sau khi nâng cấp glibc là xdm, vì việc tự động cài đặt có thể ngắt kết "
 "nối đến phiên chạy X11 đang hoạt động."
 
-#: ../debhelper.in/libc.templates:1001
 #. Type: boolean
 #. Description
+#: ../debhelper.in/libc.templates:1001
 msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
@@ -121,9 +125,9 @@ msgstr ""
 "Văn lệnh này đã phát hiện những dịch vụ đã cài đặt sau mà phải bị dừng chạy "
 "trước khi nâng cấp: ${services}"
 
-#: ../debhelper.in/libc.templates:1001
 #. Type: boolean
 #. Description
+#: ../debhelper.in/libc.templates:1001
 msgid ""
 "If you want to interrupt the upgrade now and continue later, please answer "
 "No to the question below."
@@ -131,15 +135,15 @@ msgstr ""
 "Nếu bạn muốn làm gián đoạn tiến trình nâng cấp ngay bây giờ và tiếp tục sau, "
 "hãy trả lời « Không » bên dưới."
 
-#: ../debhelper.in/libc.templates:2001
 #. Type: string
 #. Description
+#: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
 msgstr "Các dịch vụ cần khởi chạy lại để nâng cấp thư viện libc GNU:"
 
-#: ../debhelper.in/libc.templates:2001
 #. Type: string
 #. Description
+#: ../debhelper.in/libc.templates:2001
 msgid ""
 "Running services and programs that are using NSS need to be restarted, "
 "otherwise they might not be able to do lookup or authentication any more "
@@ -153,23 +157,23 @@ msgstr ""
 "lại danh sách định giới bằng dấu cách các văn lệnh init.d cho dịch vụ cần "
 "khởi chạy lại ngay bây giờ, và sửa nếu thích hợp."
 
-#: ../debhelper.in/libc.templates:2001
 #. Type: string
 #. Description
+#: ../debhelper.in/libc.templates:2001
 msgid ""
 "Note: restarting sshd/telnetd should not affect any existing connections."
 msgstr ""
 "Ghi chú : khởi chạy lại sshd/telnetd không nên có tác động kết nối đang chạy."
 
-#: ../debhelper.in/libc.templates:3001
 #. Type: error
 #. Description
+#: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
 msgstr "Lỗi khởi chạy lại một số dịch vụ để nâng cấp libc GNU."
 
-#: ../debhelper.in/libc.templates:3001
 #. Type: error
 #. Description
+#: ../debhelper.in/libc.templates:3001
 msgid ""
 "The following services could not be restarted for the GNU libc library "
 "upgrade:"
@@ -177,9 +181,9 @@ msgstr ""
 "Những dịch vụ theo đây không thể được khởi chạy lại để nâng cấp thư viện "
 "libc GNU:"
 
-#: ../debhelper.in/libc.templates:3001
 #. Type: error
 #. Description
+#: ../debhelper.in/libc.templates:3001
 msgid ""
 "You will need to start these manually by running '/etc/init.d/<service> "
 "start'."
@@ -187,15 +191,16 @@ msgstr ""
 "Bạn sẽ cần phải tự khởi chạy lại các dịch vụ này, bằng cách chạy lệnh « /etc/"
 "init.d/<service> start »."
 
-#: ../debhelper.in/libc.templates:4001
 #. Type: error
 #. Description
+#: ../debhelper.in/libc.templates:4001
 msgid "xscreensaver and xlockmore must be restarted before upgrading"
-msgstr "Trước khi nâng cấp thì cần phải khởi chạy lại xscreensaver và xlockmore"
+msgstr ""
+"Trước khi nâng cấp thì cần phải khởi chạy lại xscreensaver và xlockmore"
 
-#: ../debhelper.in/libc.templates:4001
 #. Type: error
 #. Description
+#: ../debhelper.in/libc.templates:4001
 msgid ""
 "One or more running instances of xscreensaver or xlockmore have been "
 "detected on this system. Because of incompatible library changes, the "
@@ -203,4 +208,29 @@ msgid ""
 "these programs. You should arrange for these programs to be restarted or "
 "stopped before continuing this upgrade, to avoid locking your users out of "
 "their current sessions."
-msgstr "Một hay nhiều tiến trình đang chạy của xscreensaver hay xlockmore đã được phát hiện trên hệ thống này. Do thay đổi không tương thích nhau trong các thư viện, việc nâng cấp thư viện libc của GNU có thể dẫn đến hai chương trình này không cho phép xác thực. Để tránh trường hợp này, dừng chạy hay khởi chạy lại tiến trình nào đang chạy của hai chương trình này trước khi tiếp tục nâng cấp."
+msgstr ""
+"Một hay nhiều tiến trình đang chạy của xscreensaver hay xlockmore đã được "
+"phát hiện trên hệ thống này. Do thay đổi không tương thích nhau trong các "
+"thư viện, việc nâng cấp thư viện libc của GNU có thể dẫn đến hai chương "
+"trình này không cho phép xác thực. Để tránh trường hợp này, dừng chạy hay "
+"khởi chạy lại tiến trình nào đang chạy của hai chương trình này trước khi "
+"tiếp tục nâng cấp."
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid "Restart services during package upgrades without asking?"
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../debhelper.in/libc.templates:5001
+msgid ""
+"There are services installed on your system which need to be restarted when "
+"certain libraries, such as libpam, libc, and libssl, are upgraded. Since "
+"these restarts may cause interruptions of service for the system, you will "
+"normally be prompted on each upgrade for the list of services you wish to "
+"restart.  You can choose this option to avoid being prompted; instead, all "
+"necessary restarts will be done for you automatically so you can avoid being "
+"asked questions on each library upgrade."
+msgstr ""
