--- a/debian/changelog
+++ b/debian/changelog
@@ -38,7 +38,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     tg-____longjmp_chk.diff, tg-elfosabi_gnu.diff, tg-libc_once.diff}.
   * patches/hurd-i386/submitted-libc_once.diff: Move kfreebsd part to
     patches/kfreebsd/submitted-libc_once.diff.
-  * patches/hurd-i386/submitted-ldsodefs.h.diff: Move commited part to
+  * patches/hurd-i386/submitted-ldsodefs.h.diff: Move committed part to
     patches/hurd-i386/cvs-ldsodefs.h.diff
 
   [ Petr Salinger ]
