patches/hurd-i386/submitted-sgttyb.diff: New patch to fix sgttyb ioctls values.
svn path=/glibc-package/trunk/; revision=5033

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     patches/kfreebsd/submitted-libc_once.diff.
   * patches/hurd-i386/submitted-ldsodefs.h.diff: Move committed part to
     patches/hurd-i386/cvs-ldsodefs.h.diff
+  * patches/hurd-i386/submitted-sgttyb.diff: New patch to fix sgttyb ioctls
+    values.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
