New patch from Pino Toscano to fix crash or spurious deallocation on bogus input.
svn path=/glibc-package/trunk/; revision=5039

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-dup2-fix.diff: Trivially port to dup3.
   * patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: New patch to
     brown-tape fix iceweasel.
+  * patches/hurd-i386/submitted-_hurd_socket_server-indexcheck.diff: New patch
+    from Pino Toscano to fix crash or spurious deallocation on bogus input.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
