* add kfreebsd/local-use-thr-primitives.diff to use kernel thr*  primitives inside linuxthreads. * bump minimal FreeBSD kernel version to 8.1.
svn path=/glibc-package/trunk/; revision=5041

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,10 @@ eglibc (2.13-22) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
+  * add kfreebsd/local-use-thr-primitives.diff to use kernel thr*
+    primitives inside linuxthreads. Closes: #639658.
+  * debian/sysdeps/sysdeps/kfreebsd.mk, debhelper.in/libc.preinst:
+    bump minimal FreeBSD kernel version to 8.1.
 
   [ Steve Langasek ]
   * Add a new debconf template, libraries/restart-without-asking, shared
