hurd: fix recvfrom on socketpaire
svn path=/glibc-package/trunk/; revision=5044

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-_hurd_socket_server-indexcheck.diff: New patch
     from Pino Toscano to fix crash or spurious deallocation on bogus input.
   * libc0.3.symbols.hurd-i386: Drop removed unused xxx_ and yyy_ RPCs.
+  * patches/hurd-i386/submitted-hurd-recvfrom.diff: New patch from Pino
+    Toscano to fix recvfrom on socketpair.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
